# FastAPI-project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb  user.py
api/: courses.py  sections.py  users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
