[tool.poetry]
name = "youtubetutorials"
version = "0.1.0"
description = ""
authors = ["Alexandros Samartzis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
pydantic = "^2.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
